# archeologist

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
src/: __init__.py
src/ast/: __init__.py  lineage.py  parser.py
src/cli/: __init__.py  __main__.py
src/db/: database.py  schema.sql
src/git/: __init__.py  walker.py
src/github/: __init__.py  fetcher.py  geographic.py
src/mcp/: server.py
src/synthesis/: __init__.py  narrative.py
tests/: test_e2e.py  test_lineage.py
