[project]
name = "archeologist"
version = "0.2.0"
description = "Code archaeologist - reconstruct function decision history via AST-aware lineage tracking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "GitPython",
    "PyGithub",
    "tree-sitter==0.21.0",
    "tree-sitter-languages>=1.9.0",
    "click",
    "pytest",
    "python-dotenv",
    "pyyaml",
]

[project.scripts]
arc = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
